# api/wallet/wallet.routes.js
@@ -9,7 +9,6 @@ router.put('/', walletsController.PUT_WALLETS);
 
 // Wallet Alchemy Endpoints
 router.get('/:wallet/tokens', walletsController.GET_WALLET_TOKENS);
-router.get('/:wallet/transactions/ethereum', walletsController.GET_WALLET_ETHEREUM_TRANSACTIONS);
-router.get('/:wallet/transactions/arbitrum', walletsController.GET_WALLET_ARBITRUM_TRANSACTIONS)
+router.get('/:wallet/transactions', walletsController.GET_WALLET_TRANSACTIONS);
 
 module.exports = router;
