# swagger.json
@@ -3,7 +3,7 @@
     "info": {
       "version": "1.0.0", 
       "title": "Web3 Sandbox Backend",
-      "description": "APIs: Dexscreener & Etherscan. SDKs: Alchemy",
+      "description": "APIs: Dexscreener. SDKs: Alchemy",
       "license": {
         "name": "MIT",
         "url": "https://opensource.org/licenses/MIT"
@@ -102,7 +102,7 @@
                 }
             }
         },
-        "/api/wallet/{wallet}/transactions": {
+        "/api/wallet/{wallet}/transactions/ethereum": {
             "get": {
                 "summary": "Get transactions by user wallet (utilizing the Alchemy SDK)",
                 "description": "Returns the user's wallet transactions.",
